--- a/views/dont-call-me-maybe.ejs
+++ b/views/dont-call-me-maybe.ejs
@@ -7,6 +7,7 @@
 					<h2 class="title">Don't Call Me Maybe</h2>
 					<p class="date">September 2, 2014</p>
 					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-dontcallmemaybe.jpg" alt="">
+					<p class="ap-image">AP Image</p>
 				</div>
 
 				<div class="column-content-wrapper">
@@ -33,8 +34,11 @@
 					<p>Now back in Coach Zerhhelt's good graces, he gave me a nickname and on the bus ride back to Long Island said, "Buck, Herm Edwards says you are the most improved player of training camp so far."
 					 
 					<p>I would play well in all of the preseason games.  In the fourth game in Philadelphia I “left it all on the field”, as the cliché goes.  Playing wherever they needed me on special teams and making several catches on offense, I was feeling good about my chances of making the 53 man roster.  Our head coach, Herm Edwards had announced that all of the required cuts would be made over the next 48 hours. 
-					 
-					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-caption.jpg"  style="float: right; width: 375px;"alt=""> 
+					<div class="caption-image">
+					 	<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-caption.jpg"> 
+					 	<p class="ap-image">AP Image</p>
+					</div>
+					
 
 					<p>Now out of the dorms and housed in the Long Island Marriott, my then girlfriend and now wife spent those 48 hours playing general manager.  We’d go over the entire roster several times and try to determine who would be given their walking papers.  I tried to stay positive, reminding myself that this regime doesn’t cut draft picks. Most NFL teams keep three tight ends, and I was the third. I had improved every practice and every coach loved my effort and attitude. 
 					 
