--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,13 +3,13 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h3>About Football by Football</h3>
-					<p>Most judges practice law before donning a robe. Most car salesmen have driven a car. And we presume most sex therapists aren’t virgins. 
- 
+					<p>Most judges practice law before donning a robe. Most car salesmen have driven a car. 
+
 					<p>FootballByFootball.com is a football analysis website providing unique player-writer generated content; owned & operated by experienced football players. 
 					 
-					<p>Experience counts immensely—especially in analyzing the world’s most complex sport.  A tiny percentage of the writing population has football experience.  This is a disparity in need of a change.     
+					<p>Experience counts immensely—especially in analyzing the world’s most complex sport.  A tiny percentage of the writing population has football experience.  This is a disparity we aim to change.     
 					 
-					<p>Football fans want insight.  And when the world orders a steak, you don’t butcher a chicken. 
+					<p>Football fans crave insight.  So, when the world orders a steak, you don’t butcher a chicken. 
 					 
 					<p>Welcome to FootballByFootball.com.
 				</div>
