--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/css/app.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
-	
+
 	<script src="/js/jquery.1.9.min.js"></script>
 	<!-- <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script> -->
 	<script type="text/javascript" src="//use.typekit.net/vnz8awm.js"></script>
@@ -29,8 +29,8 @@
 			<div class="logo"><a href="/"><img src="/img/logo-whitebanner.png" alt=""></a></div>
 		<% } %>
 			<div class="right-side">
-				<a href="javascript:void(0);" class="article-links">Columns</a>
-				<a href="javascript:void(0);" class="article-links">Locker Room</a>
+				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links"><span class="fa fa-twitter"> Twitter</span></a>
+				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links"><span class="fa fa-facebook"> Facebook</span></a>
 			</div>
 		</div>
 
