--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,12 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6" style="margin-top: 20px;">
-						<div class="medium-article" style="background-image: url(/img/medium-article-image.jpg)">
+						<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/grey-pic.jpg)">
 							<div class="overcast"></div>
 							<div class="white banner right">COLUMN:</div>
 							<div class="headline">
 								<div class="inner-content">
-									<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & the M-effers</h3></a></div>
+									<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & <br>the M-effers</h3></a></div>
 									<div class="byline">
 										Grey Ruegamerr
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
