--- a/views/memo-to-johnny-rookie.ejs
+++ b/views/memo-to-johnny-rookie.ejs
@@ -7,6 +7,7 @@
 					<h2 class="title">Memo to Johnny Rookie</h2>
 					<p class="date">September 2, 2014</p>
 					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/manziel_hoyer.jpg" alt="">
+					<p class="ap-image">AP Image</p>
 				</div>
 
 				<div class="column-content-wrapper">
@@ -43,7 +44,12 @@
 					<p>Some coaches are more welcome to ideas and recommendations than others.  But I will say the more success you have the more open they will be to your opinions.  After the film study and note taking, walk upstairs to the coach’s offices and sit down with the quarterback coach and coordinator and discuss some of your thoughts or concerns from the defense you just dissected.  They’ll have some ideas that you haven’t thought of yet.  Usually, protections are the first concern and the routes and match-ups occur after that.  You can draw up a lot of amazing plays that attack every defense, but if you can’t get to the back of your drop without getting smashed by a blitzing strong safety or premier defensive end, what’s the point. 
 					 
 					<p>Some quarterbacks even hold their own meetings on Tuesday evening to discuss the game plan so by the time you walk inWednesday morning, you’re one step ahead of the rest of the offense.
-					 
+
+					<div class="caption-image">
+						<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/johnny_bench.jpg" alt="">
+						<p class="ap-image">AP Image</p>
+					</div>
+ 
 					<p>Wednesday is here and again your team is going to have that tough loss in the back of their minds.  They will be gauging your confidence and examining how serious you are about getting the team back on track.  Are you ready go toe to toe with Luck, or are you still feeling sorry for yourself about Sunday’s loss?  After all the practices and meetings and as the other players’ cars start to pull out of the parking lot around 5pm, grab a protein bar and head back to the quarterback room.  Third downs are the most important down in the NFL and that is the focus for tomorrow. 
 					 
 					<p>Thursday is the same as Wednesday but it’s usually more complex with blitz protections and a slew of challenging defensive coverages coming into play on third down. 
@@ -52,7 +58,8 @@
 					<p>Friday’s red zone, short yardage, and a review of everything you did on Wednesday and Thursday.  Most of the team is in good spirits as their bodies are finally recovered from the mayhem of the previous Sunday.  Quarterbacks have to be perfect on Fridays.  A good offensive coordinator expects the ball to not touch the ground in team, 7 on 7, or red zone drills.  This is the “dress rehearsal” for the game in two days.  The coaches have honed their game plan and they want to see the offense run like a well-oiled machine.  It all starts and ends with the quarterback.
 					 
 					<p>Some players go out with their teammates or friends on Friday night.  Feel free to do that as everyone needs a mental break from the game.  Be sure to remember that every fan you come across knows you have a huge game in 36 hours. 
-					 
+
+
 					<p>Saturday is a walk thru or jog thru, and you better understand every facet of the game plan…in the meeting room and on the field.  Your teammates and coaches want to sleep well with dreams of a big win. A quarterback that doesn’t know which is the right read against cover 3 weak zone in a walk-thru, or the correct audible versus a 3-4 Sam/Strong Safety 2 Slice Zone Dog done at half speed, won’t help them rest easy.
 					 
 					<p>Sunday arrives.  The difficult work is done.  You’ve prepared to give yourself and your team a chance to be successful.  Do what you do best.  Play the game you love with instinct and passion. 
