--- a/views/making-it-through-final-roster-cuts.ejs
+++ b/views/making-it-through-final-roster-cuts.ejs
@@ -2,7 +2,7 @@
 <div class="lockerroom">
 	<div class="lockerroom-header" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer.jpg);">
 		<div class="container">
-			<h1 class="title">Making it Through Final Roster Cuts</h1>
+			<h1 class="title">Locker Room: Making it Through Final Roster Cuts</h1>
 		</div>
 	</div>
 	<div class="lockerroom-content">
