--- a/views/nfl-stress-the-m-effers.ejs
+++ b/views/nfl-stress-the-m-effers.ejs
@@ -4,9 +4,9 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="column-header">
-					<h2 class="title">NFL Stress & the M-effers</h2>
+					<h2 class="title">NFL Stress & the <br>M-effers</h2>
 					<p class="date">September 2, 2014</p>
-					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/manziel_hoyer.jpg" alt="">
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/grey-pic.jpg" alt="">
 				</div>
 
 				<div class="column-content-wrapper">
