--- a/views/nfl-stress-the-m-effers.ejs
+++ b/views/nfl-stress-the-m-effers.ejs
@@ -20,8 +20,11 @@
 
 <p>It’s 2nd and 8 and the play comes in.  You try to catch your breath, but stumble through the run-on, word-porn play call to the fellas in the huddle...#3 M-effer.  You’re a little frazzled, say the snap count, break the huddle, walk to the line of scrimmage, read the defense and start the cadence. M-effers in check for the moment…
 
-<p>During the cadence you notice the defense shift and you immediately know the out-route will be available.  You're almost finished with the cadence but...holy sh^%...was it on one or two?...return of the M-effer.  You guess right and drop back, throwing the out route to a wide open receiver. He makes the corner back stumble and picks up the first down. 
+<div class="caption-image">
+	<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/stressface.jpg" alt="">
+</div>
 
+<p>During the cadence you notice the defense shift and you immediately know the out-route will be available.  You're almost finished with the cadence but...holy sh^%...was it on one or two?...return of the M-effer.  You guess right and drop back, throwing the out route to a wide open receiver. He makes the corner back stumble and picks up the first down. 
 <p>Perfect!  First down, move the chains! Next play! From the start to finish that would usually last 30-45 seconds. 
 
 <p>It isn’t until you have the opportunity to watch film the next day that you notice a crime scene on your game report for that play.  M-effers come marching in as you ask for explanations on critiques you hadn’t even considered. The coach goes on to explain; despite the first down, you should have thrown to the running back in the flat instead of the out route, your footwork in the drop was sloppy, you didn’t accelerate through the throw, the ball placement was a little low and you were slow to the line of scrimmage. Ok, I guess.  Constructive criticism, fix it. 
