--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
 								<div class="inner-content">
 									<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & <br>the M-effers</h3></a></div>
 									<div class="byline">
-										Grey Ruegamerr
+										Grey Ruegamer
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
 									</div>
 								</div>
