--- a/views/nfl-stress-the-m-effers.ejs
+++ b/views/nfl-stress-the-m-effers.ejs
@@ -47,7 +47,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="author-badge">
-					<div class="black banner right">Football <span class="by">by</span> Grey Ruegamerr</div>
+					<div class="black banner right">Football <span class="by">by</span> Grey Ruegamer</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
 					<div class="content">
 						<p class="item">Offensive Line</p>
