--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,92 +1,140 @@
 	<%= include header %>
 	<div class="main-articles">
-	<div class="container">
+		<div class="container">
 
-		<div class="row">
-			
-			<div class="col-md-6">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/manziel_hoyer.jpg)">
-							<div class="overcast"></div>
-							<div class="headline">
-								<div class="white banner left">COLUMN:</div>
-								<div class="inner-content">
-									<div class="copy"><a href="/column/memo-to-johnny-rookie"><h3>Memo to Johnny Rookie</h3></a></div>
-									<div class="byline">
-										Sage Rosenfels
-										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+			<div class="row">
+				
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-derekcarr.jpg)">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/start-the-carr-the-case-for-starting-rookie-quarterbacks"><h3>Start the Carr:  The Case for Starting Rookie Quarterbacks</h3></a></div>
+										<div class="byline">
+											Brady Quinn
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradyquinn.jpg)"></div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-6" style="margin-top: 20px;">
-						<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/grey-pic.jpg)">
-							<div class="overcast"></div>
-							<div class="white banner right">COLUMN:</div>
-							<div class="headline">
-								<div class="inner-content">
-									<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & <br>the M-effers</h3></a></div>
-									<div class="byline">
-										Grey Ruegamer
-										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
+
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="medium-article lockerroom">
+								<div class="black banner right">LOCKER ROOM:</div>
+								<div class="headline">
+									<div class="inner-content">
+										<div class="copy"><a href="/lockerroom/best-day-one-memory"><h3>Best Day One Memory</h3></a></div>
+									</div>
+								</div>
+							</div>
+							<div class="locker-authors">
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+								</div>
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+								</div>
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 2, 2014</p>
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/manziel_hoyer.jpg)">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/memo-to-johnny-rookie"><h3>Memo to Johnny Rookie</h3></a></div>
+										<div class="byline">
+											Sage Rosenfels
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6" style="margin-top: 20px;">
-						<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-dontcallmemaybe.jpg)">
-							<div class="overcast"></div>
-							<div class="black banner right">COLUMN:</div>
-							<div class="headline">
-								<div class="inner-content">
-									<div class="copy"><a href="/column/dont-call-me-maybe"><h3>Don't Call Me Maybe</h3></a></div>
-									<div class="byline">
-										Joel Dreessen
-										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
+					<div class="row">
+						<div class="col-md-6" style="margin-top: 20px;">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/grey-pic.jpg)">
+								<div class="overcast"></div>
+								<div class="white banner right">COLUMN:</div>
+								<div class="headline">
+									<div class="inner-content">
+										<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & <br>the M-effers</h3></a></div>
+										<div class="byline">
+											Grey Ruegamer
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
+										</div>
 									</div>
 								</div>
+							</div>
+						</div>
+						<div class="col-md-6" style="margin-top: 20px;">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-dontcallmemaybe.jpg)">
+								<div class="overcast"></div>
+								<div class="black banner right">COLUMN:</div>
+								<div class="headline">
+									<div class="inner-content">
+										<div class="copy"><a href="/column/dont-call-me-maybe"><h3>Don't Call Me Maybe</h3></a></div>
+										<div class="byline">
+											Joel Dreessen
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="medium-article lockerroom">
+								<div class="black banner right">LOCKER ROOM:</div>
+								<div class="headline">
+									<div class="inner-content">
+										<div class="copy"><a href="/lockerroom/making-it-through-final-roster-cuts"><h3>Making it Through Final Roster Cuts</h3></a></div>
+									</div>
+								</div>
+							</div>
+							<div class="locker-authors">
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
+								</div>
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
+								</div>
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_michaelrobinson.jpg)"></div>
+								</div>
+								<div class="author-image-wrap">
+									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+							</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-			<div class="col-md-6">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="medium-article lockerroom">
-							<div class="black banner right">LOCKER ROOM:</div>
-							<div class="headline">
-								<div class="inner-content">
-									<div class="copy"><a href="/lockerroom/making-it-through-final-roster-cuts"><h3>Making it Through Final Roster Cuts</h3></a></div>
-								</div>
-							</div>
-						</div>
-						<div class="locker-authors">
-							<div class="author-image-wrap">
-								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
-							</div>
-							<div class="author-image-wrap">
-								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
-							</div>
-							<div class="author-image-wrap">
-								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_michaelrobinson.jpg)"></div>
-							</div>
-							<div class="author-image-wrap">
-								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
-						</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
 		</div>
 
-	</div>
 	</div>
 	<%= include footer %>
