--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
 								<div class="black banner right">LOCKER ROOM:</div>
 								<div class="headline">
 									<div class="inner-content">
-										<div class="copy"><a href="/lockerroom/best-day-one-memory"><h3>Best Day One Memory</h3></a></div>
+										<div class="copy"><a href="/lockerroom/best-day-one-memory"><h3>Best Week One NFL Memory</h3></a></div>
 									</div>
 								</div>
 							</div>
