--- a/views/lr-2-best-day-one-memory.ejs
+++ b/views/lr-2-best-day-one-memory.ejs
@@ -2,7 +2,7 @@
 <div class="lockerroom">
 	<div class="lockerroom-header" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer.jpg);">
 		<div class="container">
-			<h1 class="title">Locker Room: Best Day One Memory</h1>
+			<h1 class="title">Locker Room: Best Week One NFL Memory</h1>
 		</div>
 	</div>
 	<div class="lockerroom-content">
