--- a/views/lr-2-best-day-one-memory.ejs
+++ b/views/lr-2-best-day-one-memory.ejs
@@ -14,7 +14,8 @@
 						Football <span class="by">by</span> Sage Rosenfels
 						<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
 					</div>
-					<div class="lockerrooom-entry-content">
+					<div class="lockerrooom-entry-content cf">
+						<img src="https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/lock-sagejersey.jpg" alt="" style="float: left; padding: 20px; padding-left: 0;">
 						<p>My favorite season opening game came in 2010 as a member of the New York Giants. I had been traded from the Vikings just eight days prior after Brett Favre came back for a second year with that team. I was swimming mentally, as I spent every waking second that week trying to learn Kevin Gilbride’s offense. 
 
 						<p>The reason that game is so special to me is because it was the regular season opening of Met-Life Stadium. Coach Tom Coughlin mentioned the importance of the game, knowing that the score would be noted in the team program for decades to come. We beat the Carolina Panthers in the spectacular $1.6 Billion stadium.  But the best part for me came after the game. 
@@ -34,7 +35,7 @@
 						<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
 					</div>
 
-					<div class="lockerrooom-entry-content">
+					<div class="lockerrooom-entry-content cf">
 						<img src="https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/lock-ozzysigned.jpg" alt="" style="float: left; padding: 20px; padding-left: 0;">
 
 						<p>The 2005 Thursday NFL Kickoff game had all the energy, pomp and circumstance that you’d expect from an NFL opener. But that one was different. 
@@ -65,7 +66,7 @@
 					<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
 				</div>
 
-				<div class="lockerrooom-entry-content">
+				<div class="lockerrooom-entry-content cf">
 					<p>The year was 2007.  In ‘06, we finished the year 6-2 with a big-time win against the eventual NFC Champion Chicago Bears. Packer fans were eager to see if this year's team could ride the momentum. 
  
 					<p>Today was opening day against a very good Philadelphia Eagles team.  Hope was everywhere in Packer Nation. Walking out of the tunnel into the jam-packed Lambeau Field Stadium, you can always smell the BBQ wafting in from the surrounding tailgate festivities.  But today it just smelled better.    
