--- a/views/start-the-carr-the-case-for-starting-rookie-quarterbacks.ejs
+++ b/views/start-the-carr-the-case-for-starting-rookie-quarterbacks.ejs
@@ -37,7 +37,7 @@
 					 
 					<div class="caption-image">
 						<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/cap-bradyquinn.jpg" alt="">
-						<p class="ap-image">"Brady Quinn was a first round draft pick of the Cleveland Browns in 2007" - AP Image</p>
+						<p class="ap-image">Brady Quinn was a first round draft pick of the Cleveland Browns in 2007 - AP Image</p>
 					</div>
 					<p>On the offensive side of the ball, they added Maurice Jones-Drew to compliment Darren McFadden to create another bound-to-be-called, “Thunder and Lightning” backfield.  The change-up in style of each back should allow for big plays in the running game, along with consistent overall production.  The only thing lacking in this concoction of rookie QB success is the explosive special teams return game.
 					 
