--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="medium-article lockerroom">
-								<div class="black banner right">LOCKER ROOM:</div>
+								<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 								<div class="headline">
 									<div class="inner-content">
 										<div class="copy"><a href="/lockerroom/best-day-one-memory"><h3>Best Week One NFL Memory</h3></a></div>
@@ -36,14 +36,16 @@
 								</div>
 							</div>
 							<div class="locker-authors">
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
-								</div>
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
-								</div>
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+								<div class="locker-author-wrap">
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -109,7 +111,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="medium-article lockerroom">
-								<div class="black banner right">LOCKER ROOM:</div>
+								<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 								<div class="headline">
 									<div class="inner-content">
 										<div class="copy"><a href="/lockerroom/making-it-through-final-roster-cuts"><h3>Making it Through Final Roster Cuts</h3></a></div>
@@ -117,18 +119,20 @@
 								</div>
 							</div>
 							<div class="locker-authors">
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
+								<div class="locker-author-wrap">
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_michaelrobinson.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+									</div>
 								</div>
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
-								</div>
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_michaelrobinson.jpg)"></div>
-								</div>
-								<div class="author-image-wrap">
-									<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
-							</div>
 							</div>
 						</div>
 					</div>
