--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,62 @@
 		<div class="container">
 
 			<div class="row">
-				
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-derekcarr.jpg)">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-chrissnee.jpg)">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/making-it-to-week-1-in-the-nfl"><h3>Making it to Week 1 in the NFL</h3></a></div>
+										<div class="byline">
+											Chris Snee
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_chrissnee.jpg)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="medium-article lockerroom">
+								<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
+								<div class="headline">
+									<div class="inner-content">
+										<div class="copy"><a href="/lockerroom/what-do-you-make-of-the-new-illegal-contact-emphasis"><h3>What Do You Make of the New Illegal Contact "Emphasis"?</h3></a></div>
+									</div>
+								</div>
+							</div>
+							<div class="locker-authors">
+								<div class="locker-author-wrap">
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_drewbennett.jpg)"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 3, 2014</p>
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-derekcarr.jpg)">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
@@ -51,8 +102,8 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
+
 			<div class="row">
 				<hr class="bottom">
 				<p class="date">September 2, 2014</p>
