--- a/views/old-profile.ejs
+++ b/views/old-profile.ejs
@@ -1,7 +1,7 @@
-<%= include header %>
+<% include header %>
 <div class="things">
 	<div class="sidebar">
-		<%= include author-card %>
+		<% include author-card %>
 	</div>
 	<div class="profile-content">
 		<div class="content-controls">
@@ -119,4 +119,4 @@
 	  });
 	  
 	</script>
-	<%= include footer %>
+<% include footer %>
