--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1,6 +1,7 @@
 body {
 	background: #222;
 	color: #000;
+	font-size: 16px;
 }
 
 body.column {
@@ -701,7 +702,7 @@ img {
 		}
 		.lockerrooom-entry-content {
 			background: #fff;
-			padding: 10px 30px;
+			padding: 30px;
 		}
 		
 	}
@@ -873,7 +874,6 @@ img {
 			}
 		}
 	}
-
 }
 
 .banner.white.left {
@@ -1165,6 +1165,18 @@ form {
 	float: right; 
 	width: 375px; 
 	padding: 15px;
+}
+
+.pull-quote {
+	border: 5px solid red;
+	border-right: none;
+	border-left: none;
+	padding: 20px 0;
+	color: #999;
+	font-size: 24px;
+	text-align: center;
+	margin: 30px 0;
+	font-size: 25px;
 }
 
 @media (max-width: 991px) {
