--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,42 @@
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-chrissnee.jpg)">
+							<div class="medium-article lockerroom">
+								<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
+								<div class="headline">
+									<div class="inner-content">
+										<div class="copy"><a href="/lockerroom/favorite-locker-room-food-in-the-nfl"><h3>Favorite Locker Room Food in the NFL</h3></a></div>
+									</div>
+								</div>
+							</div>
+							<div class="locker-authors">
+								<div class="locker-author-wrap">
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_tankwilliams.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+									</div>
+									<div class="author-image-wrap">
+										<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 4, 2014</p>
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-chrissnee.jpg)">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
