--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 								<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 								<div class="headline">
 									<div class="inner-content">
-										<div class="copy"><a href="/lockerroom/favorite-locker-room-food-in-the-nfl"><h3>Favorite Locker Room Food in the NFL</h3></a></div>
+										<div class="copy"><a href="/lockerroom/favorite-locker-room-food-in-the-nfl"><h3>Favorite Friday Food in the NFL</h3></a></div>
 									</div>
 								</div>
 							</div>
