--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,34 @@
 	<%= include header %>
 	<div class="main-articles">
 		<div class="container">
-
 			<div class="row">
+
+
+
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/col-sept5.jpg)">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/reset-forgetting-the-preseason-in-the-nfl">
+											<h3>Reset: Forgetting the Preseason in the NFL</h3>
+										</a></div>
+										<div class="byline">
+											Brady Poppinga
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-12">
