--- a/views/column-editor/base.ejs
+++ b/views/column-editor/base.ejs
@@ -1,5 +1,5 @@
 <%= include ../header %>	
-
+<script>window.Content = { title: 'Hello' }</script>
 <div id='react-content'></div>
 
 <script src='/js/column-editor/column-base.compiled.js' ></script>
