--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,35 @@
 
 
 
+				<div class="col-md-12">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sept6.jpg);">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/how-much-gronk-al-you-can-handle-bud">
+											<h3>How Much Gronk?  All you can handle, bro.</h3>
+										</a></div>
+										<div class="byline">
+											Matt Chatham
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 5, 2014</p>
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-12">
