--- a/views/col-7-how-much-gronk-al-you-can-handle-bud.ejs
+++ b/views/col-7-how-much-gronk-al-you-can-handle-bud.ejs
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="column-header">
-					<h2 class="title">How Much Gronk?  All you can handle, bro.</h2>
+					<h2 class="title">How Much Gronk? <span class="smaller"> All You Can Handle, Bro.</span></h2>
 					<p class="date">September 6, 2014</p>
 					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sept6.jpg" alt="">
 				</div>
@@ -48,13 +48,13 @@
 					<p>Frames 2, X (a penalty), 5, 12, 14, and 15 are all very similar routes to the one Gronk was injured on.  It’s worth noting that on none of these particular plays did the safety end up in the same position at the moment of contact as Ward did on the injury play later this same season …underscoring the rare circumstances of that injury. 
 					 
 					<p>We learned from the NY Jets game that the organization trusts in Rob Gronkowski’s ability to handle a significant cardiovascular load, even on his first week back after a significant layoff from real football.  But even that fact requires context.  It wasn’t nearly as warm in New York last October as it will be Sunday in Miami.  Rep management may be the recipe for Gronk regardless of what he’s done in past “first game back” scenarios. 
-					 
-					<p>What we don’t know is if his coaches will have the same trust in exposing him to the seam area of the field where bang-bang plays and unseen hits are the norm.  The temptation will be strong, as the seam is where Gronk has done so much damage in his career…both to other teams’ defenses, and now unfortunately, to his own knee.  Gronk may feel ready, but are the play-callers?    
-					
+
 					<div class="caption-image">
 						<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/cap-sept6.jpg" alt="">
-						<p class="ap-image">Rob Gronkowski during 2014 training camp practice in Foxboro, Massachusetts - AP Image</p>
+						<p class="ap-image">Rob Gronkowski during 2014 training camp practice in Foxboro, Massachusetts - Courtesy of <a href="http://twitter.com/chatham58" target="_blank">@chatham58</a></p>
 					</div>
+
+					<p>What we don’t know is if his coaches will have the same trust in exposing him to the seam area of the field where bang-bang plays and unseen hits are the norm.  The temptation will be strong, as the seam is where Gronk has done so much damage in his career…both to other teams’ defenses, and now unfortunately, to his own knee.  Gronk may feel ready, but are the play-callers?    
 
 					<p>Gronk isn’t helped in this whole situation by a league that’s directed players down to the lower (unprotected) parts of offensive players’ bodies, to avoid hitting areas having the most protective equipment.  For safety.  That makes a whole thimble-full of good sense. 
 					 
