--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,16 @@
 	<div class="main-articles">
 		<div class="container">
 			<div class="row">
-
-
-
 				<div class="col-md-12">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sept6.jpg);">
+							<div class="big-article really-big" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sept6.jpg);">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
 									<div class="inner-content">
 										<div class="copy"><a href="/column/how-much-gronk-al-you-can-handle-bud">
-											<h3>How Much Gronk?  All you can handle, bro.</h3>
+											<h3>How Much Gronk? <span class="smaller"> All You Can Handle, Bro.</span></h3>
 										</a></div>
 										<div class="byline">
 											Matt Chatham
@@ -37,7 +34,7 @@
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/col-sept5.jpg)">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/col-sept5.jpg)">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
