--- a/views/locks-of-the-week.ejs
+++ b/views/locks-of-the-week.ejs
@@ -2,7 +2,7 @@
 <div class="column">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 .col-md-offset-2">
+			<div class="col-md-8 col-md-offset-2">
 				<div class="column-header">
 					<h2 class="title">Locks of the Week</span></h2>
 					<p class="date">September 7, 2014</p>
